[gd_scene load_steps=13 format=2]

[ext_resource path="res://ship.gd" type="Script" id=1]
[ext_resource path="res://STEEL GRAY.material" type="Material" id=2]
[ext_resource path="res://Material_003.material" type="Material" id=3]
[ext_resource path="res://Material_002.material" type="Material" id=4]
[ext_resource path="res://spearship.obj" type="ArrayMesh" id=5]
[ext_resource path="res://cannonball.tscn" type="PackedScene" id=6]
[ext_resource path="res://roll.tres" type="Animation" id=7]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, -180, 0 ) ]
}

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 5
emission_ring_radius = 8.0
emission_ring_inner_radius = 7.0
emission_ring_height = 1.0
emission_ring_axis = Vector3( 0, 0, 1 )
gravity = Vector3( 0, 0, 0 )

[sub_resource type="QuadMesh" id=4]
size = Vector2( 0.5, 0.5 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 1 )
gravity = Vector3( 0, -1, 0 )

[sub_resource type="CubeMesh" id=6]

[node name="ship" type="KinematicBody"]
script = ExtResource( 1 )
ship_speed = 20
cannonball = ExtResource( 6 )
shoot_strength = 1500

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0 )
mesh = ExtResource( 5 )
material/0 = ExtResource( 3 )
material/1 = ExtResource( 4 )
material/2 = ExtResource( 2 )

[node name="CannonBallSpawn" type="Position3D" parent="MeshInstance"]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -8.74228e-07, -7, 10 )

[node name="cannonballs" type="Node2D" parent="."]

[node name="cannonballCooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="rollTimer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/roll = ExtResource( 7 )

[node name="boundries" type="Spatial" parent="."]

[node name="lower boundry" type="Spatial" parent="boundries"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -17, 0 )

[node name="upper boundry" type="Spatial" parent="boundries"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 18, 0 )

[node name="left boundry" type="Spatial" parent="boundries"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -27, 0, 0 )

[node name="right boundry" type="Spatial" parent="boundries"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 26, 0, 0 )

[node name="DodgeEffect" type="Particles" parent="."]
amount = 60
lifetime = 0.2
explosiveness = 0.54
randomness = 1.0
local_coords = false
process_material = SubResource( 3 )
draw_pass_1 = SubResource( 4 )

[node name="BoostEffect" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5.09436, 13.7972 )
amount = 100
lifetime = 0.5
local_coords = false
process_material = SubResource( 5 )
draw_pass_1 = SubResource( 6 )

[connection signal="timeout" from="cannonballCooldown" to="." method="_on_Cooldown_timeout"]
[connection signal="timeout" from="rollTimer" to="." method="_on_rollTimer_timeout"]
